# ISISFilePolling

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  run-tests.yml
ansible/roles/run/run-detection/start/files/: last_runs.csv
ansible/roles/run/run-detection/start/meta/: main.yml
ansible/roles/run/run-detection/start/tasks/: main.yml
ansible/roles/run/run-detection/start/templates/: run-run-detection.sh.j2
ansible/roles/run/run-detection/start/vars/: development.yml  production.yml
ansible/roles/run/run-detection/stop/tasks/: main.yml
ansible/roles/run/run_detection/start/tasks/: main.yml
ansible/roles/run/run_detection/start/vars/: development.yml  production.yml
autoreduce_run_detection/: README.md  run_detection.py  settings.py
autoreduce_run_detection/tests/: test_run_detection.py
container/: run-detection.D  run_detection.Dockerfile
isis_file_polling/: ingest.py  settings.py
isis_file_polling/tests/: test_ingest.py
src/: ingest.py  message_broker.py  settings.py  test_settings.py
src/build_config/: setup_test_environment.py  setup_tests.py
src/build_config/test/: test_setup_test_environment.py
src/logs/: __init__.py
src/tests/: README.md  test_ingest.py  test_message_broker.py
